// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiltersForm reacts to apply CTA 1`] = `
.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #ADACB1;
  box-shadow: none;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
</div>
`;

exports[`FiltersForm reacts to query input 1`] = `
.c2 {
  background-color: white;
  color: #212529;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  overflow-x: auto;
  padding: 0.5rem 1rem;
  white-space: pre-wrap;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c9 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c7 {
  border: none;
  font-family: 'Press Start 2P',monospace;
  line-height: 1.5em;
  outline-color: #212529;
  padding: 0.5rem 1rem;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #ADACB1;
  box-shadow: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c5 {
  background-color: white;
  cursor: pointer;
  padding: 0 1px;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <div
      class="c2"
      type="black"
    >
      <form
        class="c3"
      >
        <div
          class="c2"
          type="black"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              General
            </div>
          </div>
        </div>
        <div
          class="c6"
        />
        <input
          aria-label="query"
          class="c7"
          name="query"
          placeholder="find theme..."
          type="text"
          value="gene"
        />
        <div
          class="c6"
        />
        <div
          class="c8"
        >
          <button
            class="c9"
            type="submit"
          >
            Apply
          </button>
          <button
            class="c9"
            type="button"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`FiltersForm reacts to reset CTA 1`] = `
.c2 {
  background-color: white;
  color: #212529;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  overflow-x: auto;
  padding: 0.5rem 1rem;
  white-space: pre-wrap;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c9 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c7 {
  border: none;
  font-family: 'Press Start 2P',monospace;
  line-height: 1.5em;
  outline-color: #212529;
  padding: 0.5rem 1rem;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #ADACB1;
  box-shadow: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c5 {
  background-color: white;
  cursor: pointer;
  padding: 0 1px;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <div
      class="c2"
      type="black"
    >
      <form
        class="c3"
      >
        <div
          class="c2"
          type="black"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              General
            </div>
            <div
              class="c5"
            >
              Other
            </div>
            <div
              class="c5"
            >
              Unspecific
            </div>
          </div>
        </div>
        <div
          class="c6"
        />
        <input
          aria-label="query"
          class="c7"
          name="query"
          placeholder="find theme..."
          type="text"
          value=""
        />
        <div
          class="c6"
        />
        <div
          class="c8"
        >
          <button
            class="c9"
            type="submit"
          >
            Apply
          </button>
          <button
            class="c9"
            type="button"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`FiltersForm renders a list of filters when opened 1`] = `
.c2 {
  background-color: white;
  color: #212529;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  overflow-x: auto;
  padding: 0.5rem 1rem;
  white-space: pre-wrap;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c9 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c7 {
  border: none;
  font-family: 'Press Start 2P',monospace;
  line-height: 1.5em;
  outline-color: #212529;
  padding: 0.5rem 1rem;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #ADACB1;
  box-shadow: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 20em;
  overflow: auto;
}

.c5 {
  background-color: white;
  cursor: pointer;
  padding: 0 1px;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div>
  <button
    class="c0"
  >
    Filter
  </button>
  <button
    class="c0"
  >
    Reset
  </button>
  <div
    class="c1"
  >
    <div
      class="c2"
      type="black"
    >
      <form
        class="c3"
      >
        <div
          class="c2"
          type="black"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              General
            </div>
            <div
              class="c5"
            >
              Other
            </div>
            <div
              class="c5"
            >
              Unspecific
            </div>
          </div>
        </div>
        <div
          class="c6"
        />
        <input
          aria-label="query"
          class="c7"
          name="query"
          placeholder="find theme..."
          type="text"
          value=""
        />
        <div
          class="c6"
        />
        <div
          class="c8"
        >
          <button
            class="c9"
            type="submit"
          >
            Apply
          </button>
          <button
            class="c9"
            type="button"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`FiltersForm renders main CTAs when not opened 1`] = `
.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #ADACB1;
  box-shadow: none;
}

<div>
  <button
    class="sc-AxirZ c0"
  >
    Filter
  </button>
  <button
    class="sc-AxirZ c0"
  >
    Reset
  </button>
</div>
`;
